# msgpack-c

./: CMakeLists.txt  README.md  appveyor.yml  msgpackcxx-config.cmake.in
.github/depends/: boost.sh  zlib.sh
.github/workflows/: .coverage.yml.kate-swp  .gha.yml.kate-swp  coverage.yml  gha.yml
ci/: build_cmake.sh  build_regression.sh
example/boost/: CMakeLists.txt
example/cpp03/: CMakeLists.txt
example/cpp11/: CMakeLists.txt
example/x3/: CMakeLists.txt
fuzz/: CMakeLists.txt  regression_runner.cpp
include/msgpack/v1/adaptor/: string.hpp
test/: CMakeLists.txt  array_ref.cpp  boost_fusion.cpp  boost_optional.cpp  boost_string_ref.cpp  boost_string_view.cpp  boost_variant.cpp  buffer.cpp  buffer_c.cpp  carray.cpp  cases.cpp  convert.cpp  fixint.cpp  fuzz_unpack_pack_fuzzer_cpp11.cpp  iterator_cpp11.cpp  json.cpp  limit.cpp  msgpack_basic.cpp  msgpack_container.cpp  msgpack_cpp11.cpp  msgpack_cpp17.cpp  msgpack_cpp20.cpp  msgpack_stream.cpp  msgpack_tuple.cpp  msgpack_vref.cpp  msgpack_x3_parse.cpp  object.cpp  object_with_zone.cpp  pack_unpack.cpp  raw.cpp  reference.cpp  reference_cpp11.cpp  reference_wrapper_cpp11.cpp  shared_ptr_cpp11.cpp  size_equal_only.cpp  streaming.cpp  unique_ptr_cpp11.cpp  user_class.cpp  version.cpp  visitor.cpp  (+1 more)
test-install/: CMakeLists.txt
